# early_phd_bad_code_memories

./: README.md
2023_Final_NR_Stack/: CMakeLists.txt  README.md  package.xml
2023_Final_NR_Stack/python_scripts/: nr_tracker_final.py
2023_Final_NR_Stack/src/: offboard_pub.cpp
2023_PID_v_NR_Important_Data-Figures/: README.md
Final_NR_Wardi_Tracker_Stack/: README.md  package.xml
Final_NR_Wardi_Tracker_Stack/launch/: nr_tracker_launch.py
one/: CMakeLists.txt  package.xml
one/src/: first_orig.cpp  fly.cpp  ratesctrl.cpp  run.cpp  simplepub.cpp  simplesub.cpp
pid2/: CMakeLists.txt  package.xml
pid2/scripts/: pid1.py
wardi_hardware/: CMakeLists.txt  README.md  package.xml
wardi_hardware/python_scripts/: hard_conversions_thrust_throttle.py  hard_nr_tracker_final.py  hard_pid.py  sim_conversions_thrust_throttle.py  sim_fix_rollpitch_maybe.py  sim_nr_tracker_final.py  sim_nr_with_reflog.py  sim_pid.py  sim_vanilla_trajectories.py
wardi_hardware/src/: hardware_offboard_pub.cpp  sim_offboard_pub.cpp  sim_pid_pub.cpp  sim_vanilla_pub.cpp
wardi_yaw/: CMakeLists.txt  package.xml
wardi_yaw/scripts/: CBF_done_fix_vert.py  CBF_log_all.py  CBF_log_all_fix_vert.py  CBF_on_everything.py  circle_fig8_work.py  final_xy_b4_yaw.py  finnal_with_data.py  for_hardware_1.py  implement_CBF.py  move_work.py  move_work2.py  move_x_done.py  move_xy_done.py  move_y_work.py  rosbagreader.py  test.py  test_max_throttle_force.py  tf_works_no_yaw_yet.py  thrust_done.py  work_angles2.py  yaw_all_work.py  yaw_all_work2.py  yaw_done.py  yaw_work.py
wardi_yaw/src/: loc1.cpp  move2.cpp  move3.cpp  move4.cpp  thrust_pub.cpp  yaw_pub.cpp
